--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
-	<display-name>Zmeat</display-name>
+	<display-name>SpringWebMVC</display-name>
 	<!-- Add Spring MVC DispatcherServlet as front controller -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
